Fri Aug  1 15:33:59 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.c: Patch from Denis Mikhalkin to
	forward KeyRelease events as well as KeyPress events.
	(#115597)

Fri Aug  1 15:06:25 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/gdk.c (gdk_parse_args): g_set_prgname("<unknown>")
 	if argc is 0 as well, instead of leaving it unset.
 	(#116023, Michael Meeks)
 
Thu Jul 31 23:09:02 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbar.c (gtk_toolbar_class_init): make show_arrow
	default to TRUE; ignore the property when api_mode != NEW_API

2003-07-31  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwindow.c (gtk_window_set_default_icon): Rename parameter pixbuf to icon, to 
	pacify gtk-doc.

	* gtk/gtkwidget.c (gtk_widget_class_init): Fix formatting of drag-motion example.

Thu Jul 31 15:33:33 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtk*tool*.h: add padding to subclasses of GtkToolItem

Thu Jul 31 15:29:28 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolitem.c (struct _GtkToolItemPrivate): remove unused
	overflow_item field.

Wed Jul 30 21:11:13 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolitem.h: make _gtk_tool_item_toolbar_reconfigured()
	an internal function

	* gtk/gtktoolitem.h: remove unused declaration of
	_gtk_tool_item_get_drag_window().

Wed Jul 30 17:03:58 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbutton.[ch]:
	(gtk_tool_button_new): swap icon_widget and label arguments to
	match BonoboUIToolbarButton.

	* gtk/gtktoolbar.h: un-deprecate gtk_toolbar_{set|unset}_style().

2003-07-30  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwidget.c (gtk_widget_class_init): Some updates to the DND signal docs.

2003-07-29  Tor Lillqvist  <tml@iki.fi>

	Fix for #108007, #112402, #117042: There was confusion in
	gdk/win32 at various places whether a window position refers to
	the decoration position or the client area position. Also whether
	window size includes decorations or not.
	